src/objects/Player__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <externalId>true</externalId>
        <label>Twitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Player-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>